[package]
name = "splitter"
version = "0.2.3"
authors = ["Lukas3674 <lukashassler@web.de>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/Lukas3674/rust-splitter"
documentation = "https://docs.rs/splitter"
license = "MIT"
description = "A string and slice splitter library"
keywords = ["splitter", "string", "lexer", "slice", "no-std"]
categories = ["no-std"]

[package.metadata.docs.rs]
features = ["full"]

[workspace]
members = [
    "splitter-derive",
]

[features]
std = []
impls = []
infos = []
derive = ["dep:splitter-derive"]
full = ["std", "impls", "infos", "derive"]

[dependencies]
splitter-derive = { version = "0.1.5", optional = true }
