[package]
name = "splitter-derive"
version = "0.1.4"
edition = "2021"
authors = ["Lukas3674 <lukashassler@web.de>"]
repository = "https://github.com/Lukas3674/rust-splitter"
license = "MIT"
description = "Splitter derive macro"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
